Add manual add/remove of files
